--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.topFixedContainer {
+  color: #FFFFFF;
+  background: #165315;
+  position: fixed;
+  width: 100%;
+  padding: 7px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.discriptionContainer {
+  text-align: start;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  margin-top: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.plantsBtn {
+  background: #165315;
+  color: #FFFFFF;
+  width: 114px;
+  height: 37px;
+  margin-right: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.potsBtn {
+  width: 114px;
+  height: 37px;
+  border-width: 2px;
+  border-color: #0000004D;
+  border-style: solid;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.discription{
+  font-family: Poppins;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+margin-top: 10px;
+width: 100vw;
+height: 99px;
+color: #838383;
+}
+
+.nurseryHeading{
+  text-align: start;
+  padding-left: 2vw;
 }
